# finance-research-eval

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO  GOVERNANCE.md  LICENSE  LICENSE-docs  NOTICE  OPEN-CORE.md  README.md  SECURITY.md  TRADEMARK.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  nightly-gate-regression.yml
.specify/memory/: constitution.md
.specify/specs/finance-research-eval/: dual-use-contract.md  eval-gates.md  harness-structure.md  spec.md
docs/: investor-signals-corpus.md  usage-patrimoine-dossier-client.md
harness/: __init__.py  eval_run.py  export.py  report.py  rr.py  runner.py
harness/candidates/: __init__.py  base.py  http_openai.py  mock.py
harness/compute/: __init__.py  metrics.py
harness/connectors/: __init__.py  base.py  mock.py
harness/fixtures/: __init__.py  cases.py  cases_patrimoine.py  cases_worked.py  synthetic.py
harness/gates/: __init__.py  gates.py
harness/schema/: recommendation_record.schema.json
harness/sources/: README.md  __init__.py  demo.py  evalitem.py  loaders.py  registry.py  synthetic_corpus.py
harness/sources/samples/: convfinqa_sample.json  edgar_companyfacts_sample.json  financebench_sample.jsonl  finqa_sample.json  tatqa_sample.json
tests/: test_allocation_metrics.py  test_candidates_e2e.py  test_cases_patrimoine.py  test_compute.py  test_connectors.py  test_export.py  test_gate_regression.py  test_gate_regression_generated.py  test_gates_conformity.py  test_investor_signals_adapter.py  test_report.py  test_schema.py  test_sources.py  test_synthetic_corpus.py
tests/fixtures/: gate_regression_baseline.json  gate_regression_generated_baseline.json
tools/: check_public_hygiene.sh  gate_regression.py
tools/investor_signals/: __init__.py  adapter.py  fixtures_synthetic.py
